<resources>
    <string name="app_name">ASPApp</string>
    <string name="app_title">Notes</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="clear">Clear</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm password</string>
    <string name="required_username">Username is required</string>
    <string name="required_password">Password is required</string>
    <string name="passwords_mismatch">Passwords do not match</string>
    <string name="required_title">Title is required</string>
    <string name="registration_failed">Registration failed</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="saving_failed">Saving failed</string>
    <string name="have_account">I have an account</string>
    <string name="no_account">No account</string>
    <string name="note_title">Title</string>
    <string name="note_date">Date</string>
    <string name="note_text">Text</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_note_confirmation">Are you sure you want to delete a note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_content">No content</string>
    <string name="log_out">Log out</string>
    <string name="search">Search</string>
    <string name="tag">Tag</string>
    <string name="all">All</string>
    <string name="ok">Ok</string>
    <string name="clear_all">Clear all</string>
    <string name="add_tags">Add tags</string>
    <string name="create_new_tag">Create new tag</string>
    <string name="required_tag">Tag is required</string>


</resources>